--- a/LinkHR/Properties/Resources.resx
+++ b/LinkHR/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="people-together" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\people-together.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="employee" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\employee.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
